# audio-output-switcher

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  research-architecture.md  research-audio-outputs.md  research-hotkeys.md
src/: audio.rs  config.rs  hotkey.rs  main.rs  tray.rs
