[package]
name = "audio-output-switcher"
version = "0.1.0"
edition = "2024"
description = "Toggle between two preset audio output devices on Windows with a global hotkey"

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
